# snapback

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  snapback.py
.claude/: settings.json
docs/plans/: 2026-02-03-configure-tui-design.md  2026-02-03-configure-tui-implementation.md  2026-02-03-format-refactor-design.md
