[project]
name = "snapback"
version = "0.1.0"
description = "Hybrid backup tool with tar.gz and restic support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Josh McDade" }
]
keywords = ["backup", "restic", "tar", "incremental", "macos", "google-drive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "click>=8.1.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "rich-click>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
snapback = "snapback:main"

[project.urls]
Homepage = "https://github.com/joshm1/snapback"
Repository = "https://github.com/joshm1/snapback"
Issues = "https://github.com/joshm1/snapback/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
